# image_capturing_pipeline

./: CMakeLists.txt  Makefile  README.md  a  my_capture.cpp
pictures/: color0_1.csv  color1_1002.csv  color1_1006.csv  color1_105.csv  color2_210.csv  color3_314.csv  color4_417.csv  color5_521.csv  depth0_1.csv  depth0_3.csv  depth0_5.csv  depth1_1007.csv  depth1_1008.csv  depth1_105.csv  depth2_210.csv  depth3_315.csv  depth4_419.csv  depth5_523.csv
pictures/purplering/color/: -2147483622_2743.csv  -2147483623_2634.csv  -2147483624_2526.csv  -2147483625_2418.csv  -2147483626_2309.csv  -2147483627_2201.csv  -2147483628_2093.csv  -2147483629_1985.csv  -2147483630_1876.csv  -2147483631_1767.csv  -2147483632_1658.csv  -2147483633_1549.csv  -2147483634_1442.csv  -2147483635_1334.csv  -2147483636_1226.csv  -2147483637_1119.csv  -2147483638_1011.csv  -2147483639_903.csv  -2147483640_794.csv  -2147483641_684.csv  -2147483642_575.csv  -2147483643_466.csv  -2147483644_357.csv  -2147483645_249.csv  -2147483646_140.csv  -2147483647_31.csv  10_1007.csv  11_1115.csv  12_1222.csv  13_1329.csv  14_1436.csv  15_1544.csv  16_1652.csv  17_1759.csv  18_1867.csv  19_1974.csv  1_25.csv  1_30.csv  1_31.csv  20_2082.csv  (+24 more)
pictures/purplering/depth/: -2147483622_2753.csv  -2147483623_2644.csv  -2147483624_2535.csv  -2147483625_2426.csv  -2147483626_2317.csv  -2147483627_2208.csv  -2147483628_2099.csv  -2147483629_1990.csv  -2147483630_1881.csv  -2147483631_1772.csv  -2147483632_1663.csv  -2147483633_1554.csv  -2147483634_1446.csv  -2147483635_1338.csv  -2147483636_1230.csv  -2147483639_904.csv  (+46 more)
(+31 files in other folders)
